--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "todos",
   "version": "0.1.0",
   "private": true,
+  "main": "./server/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.20.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
